support other REST methods